--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 env:
   MIRROR_URL: "git@github.com:Remi-Mergen/chocolatine-mirror.git"
   EXECUTABLES: "binary"
-  ARGUMENTS: ""
+  ARGUMENTS: "3 5 3 1"
 
 jobs:
   check_coding_style:
