--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   MIRROR_URL: "git@github.com:Remi-Mergen/chocolatine-mirror.git"
-  EXECUTABLES: "binary"
+  EXECUTABLES: "panoramix"
   ARGUMENTS: "3 5 3 1"
 
 jobs:
