--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,14 +67,7 @@ jobs:
         run: make
         timeout-minutes: 2
       - run: make clean
-      - run: |
-          OIFS=$IFS
-          IFS=','
-          for x in $EXECUTABLES
-            do
-              ./$x $ARGUMENTS
-            done
-          IFS=$OIFS
+      - run: ./$EXECUTABLES $ARGUMENTS
 
   run_tests:
     needs: [check_program_compilation]
